log
Thu 21 Apr 2022 09:26:37 PM UTC: 
 tests:  1|8
total_score: 0/70
861bc8e
Fri 22 Apr 2022 03:13:38 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
34161b7
Fri 22 Apr 2022 03:14:03 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b99b9a3
Fri 22 Apr 2022 03:28:42 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:12: error: comparison of distinct pointer types lacks a cast [-Werror]
   82 |     if(key < tree->current){
      |            ^
treemap.c:89:14: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   89 |   return tree->current;
      |          ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e46b43d
Fri 22 Apr 2022 03:34:11 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
e94e6d6
Fri 22 Apr 2022 03:34:59 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4be5fe3
Fri 22 Apr 2022 03:36:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d2be48f
Fri 22 Apr 2022 03:40:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:40: error: expected ‘)’ before ‘{’ token
   79 |     if(is_equal(tree,key,tree->current){
      |       ~                                ^
      |                                        )
treemap.c:87:3: error: expected expression before ‘}’ token
   87 |   }
      |   ^
Compilation failed
2e96175
